Switched to imgui docking branch.

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=628,19
-Size=454,450
+Pos=839,46
+Size=342,428
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Example: Console]
 Pos=60,60
@@ -27,4 +28,18 @@ Collapsed=0
 Pos=127,263
 Size=339,180
 Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=302,183
+Size=485,414
+Collapsed=0
+
+[Docking][Data]
+DockNode  ID=0x00000001 Pos=951,181 Size=342,428
+DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=112,154 Size=1280,701 CentralNode=1 Selected=0xE87781F4
 
