--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,9 @@
 [submodule "BlackHole/vendor/GLFW"]
 	path = BlackHole/vendor/GLFW
 	url = git@github.com:glfw/glfw.git
-[submodule "vendor/ImGui"]
-	path = vendor/ImGui
-	url = git@github.com:ocornut/imgui.git
 [submodule "vendor/glm"]
 	path = vendor/glm
 	url = git@github.com:g-truc/glm.git
+[submodule "vendor/ImGui"]
+	path = vendor/ImGui
+	url = git@github.com:MichailBlack/imgui.git
