--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
-# Binaries
-**/build/
+## Commonly used CMake directories
+/build*/
 
-# Visual Studio files and folder
-.vs/
+## Dear ImGui artifacts
+imgui.ini
+
+## Visual Studio artifacts and projects
+.vs
+ipch
+*.opensdf
+*.log
+*.pdb
+*.ilk
+*.user
+*.sdf
+*.suo
+*.VC.db
+*.VC.VC.opendb
 **.sln
 **.vcxproj
 **.vcxproj.filters
