Implemented Vertex Array, Vertex Buffer, Index Buffer, Shader abstractions for OpenGL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,62 +1,15 @@
-cmake_minimum_required(VERSION 3.26.4)
-
-macro(ADD_MSVC_PRECOMPILED_HEADER PrecompiledHeader PrecompiledSource SourcesVar)
-	if(MSVC)
-		get_filename_component(PrecompiledBasename ${PrecompiledHeader} NAME_WE)
-		set(PrecompiledBinary "${CMAKE_CURRENT_BINARY_DIR}/${PrecompiledBasename}.pch")
-		set(Sources ${${SourcesVar}})
-
-		set_source_files_properties(
-			${PrecompiledSource}	PROPERTIES
-			COMPILE_FLAGS "/Yc\"${PrecompiledHeader}\" /Fp\"${PrecompiledBinary}\""
-			OBJECT_OUTPUTS "${PrecompiledBinary}"
-		)
-		
-		set_source_files_properties(
-			${Sources} PROPERTIES
-			COMPILE_FLAGS "/Yu\"${PrecompiledBinary}\" /FI\"${PrecompiledBinary}\" /Fp\"${PrecompiledBinary}\""
-			OBJECT_DEPENDS "${PrecompiledBinary}"
-		)
-	endif(MSVC)
-	
-	# Add precompiled header to SourcesVar
-	list(APPEND ${SourcesVar} ${PrecompiledSource})
-endmacro()
+cmake_minimum_required(VERSION 3.25)
 
 project(BlackHole CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED On)
 
-set(BH_SRC_PATH src/BlackHole)
-
 file(GLOB_RECURSE BH_SRC
-    ${BH_SRC_PATH}/*.cpp
-    ${BH_SRC_PATH}/*.h
+    src/BlackHole/*.cpp
+    src/BlackHole/*.h
     src/BlackHoleApp.cpp
 )
-
-file(GLOB_RECURSE SRC_CORE
-    ${BH_SRC_PATH}/Core/*.cpp
-    ${BH_SRC_PATH}/Core/*.h
-)
-
-file(GLOB_RECURSE SRC_EVENTS
-    ${BH_SRC_PATH}/Events/*.cpp
-    ${BH_SRC_PATH}/Events/*.h
-)
-
-file(GLOB_RECURSE SRC_IMGUI
-    ${BH_SRC_PATH}/ImGui/*.cpp
-    ${BH_SRC_PATH}/ImGui/*.h
-)
-
-source_group(BlackHole/Core FILES ${SRC_CORE})
-source_group(BlackHole/Events FILES ${SRC_EVENTS})
-source_group(BlackHole/ImGui FILES ${SRC_IMGUI})
-source_group(BlackHole FILES src/BlackHoleApp.cpp src/bhpch.h src/bhpch.cpp)
-
-ADD_MSVC_PRECOMPILED_HEADER(bhpch.h src/bhpch.cpp BH_SRC)
 
 add_subdirectory(vendor/spdlog)
 add_subdirectory(vendor/Glad)
@@ -70,8 +23,10 @@ add_compile_definitions(
 	$<$<CONFIG:Release>:BH_RELEASE>
 	GLFW_INCLUDE_NONE)
 
-add_executable(${CMAKE_PROJECT_NAME} src/BlackHoleApp.cpp src/bhpch.h src/bhpch.cpp ${SRC_CORE} ${SRC_EVENTS} ${SRC_IMGUI})
-set_property(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${CMAKE_PROJECT_NAME})
+add_executable(${CMAKE_PROJECT_NAME}
+	src/BlackHoleApp.cpp
+	${BH_SRC}
+)
 
 target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC
     src
@@ -85,3 +40,5 @@ target_link_libraries(${CMAKE_PROJECT_NAME} spdlog)
 target_link_libraries(${CMAKE_PROJECT_NAME} Glad)
 target_link_libraries(${CMAKE_PROJECT_NAME} glfw)
 target_link_libraries(${CMAKE_PROJECT_NAME} imgui)
+
+target_precompile_headers(${CMAKE_PROJECT_NAME} PRIVATE src/bhpch.h)
