Code refactoring and adding new features.
Features:
- Texture arrays and rendering using them
- Off-screen rendering with MSAA
- Unsynchronized buffers
- Basic editor viewport + some stats info + simple transformation properties window
- Filesystem class

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@
 /build*/
 /out*/
 
-## Assets folder special
-assets/models/
-assets/textures/skyboxes/ignore/
+## Ignored assets
+assets/ignored
 
 ## Dear ImGui artifacts
 imgui.ini
