--- a/imgui.ini
+++ b/imgui.ini
@@ -16,12 +16,36 @@ DockId=0x00000002,0
 
 [Window][Stats]
 Pos=0,22
-Size=370,698
+Size=370,366
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000007,0
+
+[Window][Light props]
+Pos=0,392
+Size=370,328
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Light props[1]]
+Pos=0,556
+Size=370,164
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Light props[0]]
+Pos=0,390
+Size=370,164
+Collapsed=0
+DockId=0x00000008,0
 
 [Docking][Data]
-DockSpace   ID=0xAC0FB68A Window=0x091AB4BE Pos=138,183 Size=1280,698 Split=X Selected=0x13926F0B
-  DockNode  ID=0x00000001 Parent=0xAC0FB68A SizeRef=370,698 Selected=0x2E4EBCAA
-  DockNode  ID=0x00000002 Parent=0xAC0FB68A SizeRef=908,698 CentralNode=1 Selected=0x13926F0B
+DockSpace         ID=0xAC0FB68A Window=0x091AB4BE Pos=112,157 Size=1280,698 Split=X Selected=0x13926F0B
+  DockNode        ID=0x00000001 Parent=0xAC0FB68A SizeRef=370,698 Split=Y Selected=0x2E4EBCAA
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=370,368 Split=Y Selected=0x2E4EBCAA
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=370,532 Split=Y Selected=0x2E4EBCAA
+        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=370,366 Selected=0x2E4EBCAA
+        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=370,164 Selected=0xE7B3978A
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=370,164 Selected=0x2CEF442F
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=370,328 Selected=0x58D463E8
+  DockNode        ID=0x00000002 Parent=0xAC0FB68A SizeRef=908,698 CentralNode=1 Selected=0x13926F0B
 
